0028092: Wrong statement in reference manual for Geom_ToroidalSurface::Bounds

Description has been corrected.